components/31-molecules/accordion/_accordion.scss
.accordion {
  .accordion--button {
    @include extra-large-text;
    @include semi-bold-text;
    @include icon(chevron-down);

    position: relative;
    padding-right: 1.6rem;
    color: inherit;
    line-height: 1.3rem;
    text-align: left;

    &::before {
      position: absolute;
      right: 0;
      transition: transform .2s ease-in-out;
      font-size: 1.4rem;
      line-height: 1.2;
    }

    &[aria-expanded=true] {
      &::before {
        transform: scaleY(-1);
      }
    }
  }

  .accordion--content {
    transition: max-height .5s ease-in-out;
    overflow: hidden;

    p {
      line-height: 1.75;
    }
  }

}

ul.accordion,
dl.accordion {
  li {
    @include theme('border-color', 'color-primary--lighten-4', 'accordion-border-color');

    border-bottom: 2px solid;

    h3 {
      margin: 1rem 0;
    }
  }

  .accordion--button {
    display: flex;
    align-items: center;
    width: 100%;
    padding: 0;
    overflow: visible;

    &::before {
      @include theme('background-color', 'color-tertiary-pastel', 'button-secondary-background');

      position: relative;
      right: auto;
      left: 0;
      min-width: 1.8rem;
      min-height: 1.8rem;
      margin: 0 .75rem 0 0;
      padding: .13rem .25rem;
      transition: transform .2s ease-in-out;
      font-size: 1.2rem;
      text-align: left;
    }

    &[aria-expanded=true] {
      @include icon(minus);

      &::before {
        transform: none;
        line-height: 1.2;
      }
    }

    &[aria-expanded=false] {
      @include icon(plus);

      &::before {
        line-height: 1.2;
      }
    }
  }
}

ul.accordion {
  margin: 0;

  > li {
    list-style: none;
  }
}

dl.accordion {
  dd {
    padding: 0;
  }
}

